+ updating splash for fun + updating stop view for readability

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,10 @@
   padding: 0;
 }
 
+td.number-cell {
+  text-align: right;
+}
+
 #header {
   display: block;
   width: 100%;
@@ -65,18 +69,30 @@
   }
 }
 
-#nothing {
+#top {
   display: block;
-  padding: 250px 0 0 275px;
+  padding: 150px 0 0 75px;
   font-size: 32px;
 }
 
-#come-back {
+#middle {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
   display: block;
-  padding: 15px 275px 0 0;
-  font-weight: bold;
+  padding: 100px 0 100px 0;
+  opacity: 0.05;
+  font-size: 26px;
   font-style: italic;
+  text-align: center;
+}
+
+#bottom {
+  display: block;
+  padding-right: 75px;
+  font-size: 20px;
+  font-weight: bold;
+  font-variant: small-caps;
   text-align: right;
-  text-decoration: underline;
+
 }
 
